# backend-template

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  dev.db  main.py  pyproject.toml
Guidelines/: Backend Template Setup.md  Instructions Backend.md
app/: main.py
app/api/: dependencies.py
app/api/routes/: __init__.py  auth.py  users.py
app/api/v1/: dependencies.py  router.py
app/api/v1/endpoints/: auth.py  users.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: base.py  database.py  session.py
app/models/: user.py
app/modules/auth/: schemas.py  service.py
app/modules/users/: models.py  schemas.py  service.py
app/schemas/: user.py
app/services/: auth_service.py  user_service.py
migrations/: env.py
migrations/versions/: 06c9d7a3f841_initial_migrations.py
tests/: conftest.py
tests/integration/: test_health.py
tests/unit/: test_security.py
